# Veilstone

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: package.yml
.serena/: project.yml
assets/branding/: veilstone.icns
config/: audio.toml  entity_animations.toml  entity_models.toml  recipes.toml  settings.toml
data/: biomes.toml  blocks.toml  items.toml
data/resource_pack_mappings/: minecraft_java.toml
docs/: ARCHITECTURE.md  BACKLOG.md  BUGS.md  CHANGELOG.md  CLAUDE.md  NEXT_STEPS.md  PROGRESS.md  RELEASE.md  RESOURCE_PACKS.md  TEXTURE_PACK_MIGRATION_PLAN.md  WORKPLAN.md
docs/adr/: 0001-engine-stack.md  0002-voxel-lighting-and-shadows.md
docs/backlog/: twilight_forest.md  ui-performance-upgrade.md
docs/research/: fogleman-engine-review.md  mob-rendering-lighting-review.md  python-minecraft-clone-review.md
resource_packs/: README.md
resource_packs/default/: pack.mcmeta
scripts/: build_app.py  generate_audio_assets.py  generate_entity_skins.py  generate_material_sidecars.py  release.bat  release.sh  run_ci_tests.py  set_release_version.py
src/voxel_sandbox/: __init__.py  __main__.py  version.py
src/voxel_sandbox/app/: __init__.py  bootstrap.py  commands.py  composition.py  crash_reporting.py  main_client.py  main_host.py  main_server.py  package_verification.py  paths.py  settings.py  update_installer.py  updates.py
src/voxel_sandbox/application/: __init__.py  inventory_presentation.py  material_quality.py  player_animation.py  player_camera.py  player_movement_events.py  player_nameplate.py  player_render.py  player_viewmodel.py  resource_packs.py
src/voxel_sandbox/audio/: __init__.py  backend.py  bus.py  director.py  events.py  registry.py  runtime.py  steps.py
src/voxel_sandbox/domain/: __init__.py
src/voxel_sandbox/engine/: __init__.py  authority.py  events.py  fluids.py  game_state.py  gameplay_constants.py  item_drops.py
src/voxel_sandbox/infrastructure/: logging.py  storage.py
src/voxel_sandbox/network/: __init__.py  chunks.py  client.py  discovery.py  interpolation.py  protocol.py  rate_limit.py  server.py  session.py
src/voxel_sandbox/render/: __init__.py  atmosphere.py  block_highlight.py  camera.py  entity_animation.py  entity_models.py  entity_renderer.py  first_person_viewmodel.py  frustum.py  gameplay_controller.py  head_bob.py  hud_controller.py  input_state.py  inventory_drag.py  inventory_ui.py  macos_input.py  material_binding.py  material_metadata.py  material_quality.py  material_shader_runtime.py  material_shader_setup.py  material_textures.py  math3d.py  menu_ui.py  model_snapshots.py  network_controller.py  perf.py  player_avatar.py  player_held_item.py  player_nameplate.py  player_viewmodel.py  postprocess.py  render_quality.py  resource_pack_presentation.py  shadows.py  sky_renderer.py  streaming_schedule.py  structure_renderer.py  vegetation_wind.py  window.py  (+2 more)
src/voxel_sandbox/tools/: __init__.py  benchmark_frame_streaming.py  benchmark_lighting.py  benchmark_mesher.py  benchmark_network.py  benchmark_physics.py  benchmark_server.py  benchmark_shadows.py  benchmark_streaming.py  benchmark_worldgen.py  first_click_smoke.py  foliage_smoke_scene.py  gameplay_smoke_screenshot.py  input_lifecycle_smoke.py  inventory_interaction_smoke.py  reference_gameplay_scene.py  reference_gameplay_screenshot.py  shadow_preset_smoke.py  structure_preview.py  swim_audio_smoke.py  water_surface_smoke.py
tests/: __init__.py  conftest.py
tests/integration/: test_application_smoke.py  test_drop_crafting_pipeline.py  test_inventory_drops.py  test_lan_client_server.py  test_lan_discovery.py  test_network_reconnect.py  test_open_to_lan.py  test_player_generated_world.py  test_remote_render_client.py  test_server_performance.py  test_ui_interaction.py  test_world_persistence.py  test_world_selection.py
tests/support/: pyglet_gl.py
tests/unit/: test_app_composition.py  test_app_paths.py  test_apply_material_quality_use_case.py  test_apply_resource_pack_use_case.py  test_atmosphere.py  test_audio.py  test_benchmark_frame_streaming.py  test_biome_registry.py  test_block_registry.py  test_build_app_script.py  test_camera.py  test_chunk_storage.py  test_chunk_streaming.py  test_cli.py  test_commands.py  test_coordinates.py  test_crafting.py  test_crash_reporting.py  test_ecs.py  test_entity_animation.py  test_events.py  test_first_click_smoke.py  test_fluids.py  test_foliage_smoke_scene.py  test_frustum.py  test_game_state.py  test_gameplay_controller.py  test_gameplay_smoke_screenshot.py  test_generation_pipeline.py  test_input_handler.py  test_input_lifecycle_smoke.py  test_input_state.py  test_inventory.py  test_inventory_interaction_smoke.py  test_inventory_logic.py  test_inventory_presentation.py  test_inventory_ui_presentation.py  test_item_entities.py  test_item_registry.py  test_lighting.py  (+54 more)
tests/unit/render/: test_block_highlight.py  test_block_mesh_visuals.py  test_gpu_mesh_batching.py  test_hud_debug_snapshot.py  test_item_icon_composer.py  test_item_icons.py  test_material_binding.py  test_material_metadata.py  test_material_quality.py  test_material_shader_runtime.py  test_material_shader_setup.py  test_material_textures.py  test_model_snapshots.py  test_perf_snapshots.py  test_render_quality.py  test_resource_pack_presentation.py  (+8 more)
tz/: UPDATE_UI_PERFORMANCE_PLAN.md  tz_base.md
(+100 files in other folders)
