[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxel-sandbox"
version = "0.1.0"
description = "An original Python voxel sandbox engine prototype"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Voxel Sandbox Contributors" }]
dependencies = [
    "moderngl>=5.12.0,<6",
    "msgpack>=1.1,<2",
    "numpy>=2.2.0,<3",
    "pillow>=11.0.0,<12",
    "pyglet>=2.1.0,<3",
]

[project.scripts]
voxel = "voxel_sandbox.__main__:main"

[dependency-groups]
dev = [
    "hypothesis>=6.0,<7",
    "import-linter>=2.11",
    "pre-commit>=4.6.0",
    "pyinstaller>=6.21.0",
    "pyright>=1.1.400,<2",
    "pytest>=8.3.0,<9",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.11.0,<1",
    "vulture>=2.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voxel_sandbox"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "voxel_sandbox/resources/config"
"assets/audio" = "voxel_sandbox/resources/assets/audio"
"assets/entities" = "voxel_sandbox/resources/assets/entities"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: isolated deterministic tests without window or service composition",
    "integration: tests that compose multiple engine/application subsystems",
    "smoke: tests that start a real application entry point and runtime resources",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
