[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxel-sandbox"
version = "0.0.1b0"
description = "An original Python voxel sandbox engine prototype"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "Voxel Sandbox Contributors" }]
dependencies = [
    "moderngl>=5.12.0,<6",
    "msgpack>=1.1,<2",
    "numpy>=2.2.0,<3",
    "pillow>=11.0.0,<12",
    "pyglet>=2.1.0,<3",
    "requests>=2.34.2",
]

[project.scripts]
voxel = "voxel_sandbox.__main__:main"

[dependency-groups]
dev = [
    "hypothesis>=6.0,<7",
    "import-linter>=2.11",
    "pre-commit>=4.6.0",
    "pyinstaller>=6.21.0",
    "pyright>=1.1.400,<2",
    "pytest>=8.3.0,<9",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.11.0,<1",
    "vulture>=2.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voxel_sandbox"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "voxel_sandbox/resources/config"
"data" = "voxel_sandbox/resources/data"
"assets/audio" = "voxel_sandbox/resources/assets/audio"
"assets/entities" = "voxel_sandbox/resources/assets/entities"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: isolated deterministic tests without window or service composition",
    "integration: tests that compose multiple engine/application subsystems",
    "smoke: tests that start a real application entry point and runtime resources",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.importlinter]
root_packages = ["voxel_sandbox"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain layer stays independent from external adapters"
type = "forbidden"
source_modules = ["voxel_sandbox.domain"]
forbidden_modules = [
    "voxel_sandbox.app",
    "voxel_sandbox.audio",
    "voxel_sandbox.infrastructure",
    "voxel_sandbox.network",
    "voxel_sandbox.render",
]

[[tool.importlinter.contracts]]
name = "Engine layer stays independent from render adapters"
type = "forbidden"
source_modules = ["voxel_sandbox.engine"]
forbidden_modules = ["voxel_sandbox.render"]

[[tool.importlinter.contracts]]
name = "Application layer stays independent from graphics APIs"
type = "forbidden"
source_modules = ["voxel_sandbox.application"]
forbidden_modules = ["pyglet", "moderngl"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
